fix(GlobalStatus): remove z-index to enhance flexibility (#2952)
The z-index usage was introduces in [this
commit](https://github.com/dnbexperience/eufemia/commit/1fb638b12df290533e6a89e7f8135a7e23c0797e#diff-4d582f82c1661d8de20042e6e65250a4d2710c2b31f8955fcd6eda14097a0b4e)
in 2019 (v4).

Today, I can't find any good reasons why to have it anymore. Surely, it
"could" break something visually. But I think we still are pretty safe
going forward without a z-index.

More info in this [Slack
thread](https://dnb-it.slack.com/archives/CMXABCHEY/p1700653977331569).

--- a/packages/dnb-eufemia/src/components/global-status/style/dnb-global-status.scss
+++ b/packages/dnb-eufemia/src/components/global-status/style/dnb-global-status.scss
@@ -12,11 +12,6 @@
     display: block;
   }
 
-  &__wrapper {
-    position: relative;
-    z-index: 1;
-  }
-
   &__shell {
     width: 100%;
     opacity: 1;
